--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Conduit</title>
-    <meta content="width=device-width" name="viewport">
+    <meta content="width=device-width" name="viewport" />
     <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
     <link
       href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
@@ -20,14 +20,14 @@
     <link rel="preconnect" href="https://conduit.productionready.io" crossorigin />
     <link rel="preconnect" href="http://code.ionicframework.com" crossorigin />
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="//demo.productionready.io/favicon.ico"
-    />
-    <style>body{min-height: 101vh;}</style>
+    <link rel="shortcut icon" type="image/x-icon" href="//demo.productionready.io/favicon.ico" />
+    <style>
+      body {
+        min-height: 101vh;
+      }
+    </style>
   </head>
   <body>
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
