--- a/index.html
+++ b/index.html
@@ -16,18 +16,34 @@
       type="text/css"
     />
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
-    <link rel="preconnect" href="https://static.productionready.io" crossorigin />
-    <link rel="preconnect" href="https://conduit.productionready.io" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://static.productionready.io"
+      crossorigin
+    />
+    <link
+      rel="preconnect"
+      href="https://conduit.productionready.io"
+      crossorigin
+    />
     <link rel="preconnect" href="http://code.ionicframework.com" crossorigin />
     <link rel="stylesheet" href="//demo.productionready.io/main.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="//demo.productionready.io/favicon.ico" />
+    <link
+      rel="shortcut icon"
+      type="image/x-icon"
+      href="//demo.productionready.io/favicon.ico"
+    />
     <style>
       body {
         min-height: 101vh;
       }
     </style>
+
+    <!-- Entry point of our app -->
+    <script type="module" src="/src/index.tsx"></script>
   </head>
+
   <body>
-    <script type="module" src="/src/index.jsx"></script>
+    <div id="app"></div>
   </body>
 </html>
