--- a/index.html
+++ b/index.html
@@ -3,47 +3,24 @@
   <head>
     <meta charset="utf-8" />
     <title>Conduit</title>
-    <meta content="width=device-width" name="viewport" />
+
     <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
     <link
-      href="//code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
+      href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
       rel="stylesheet"
       type="text/css"
     />
     <link
-      href="//fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
+      href="https://fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
       rel="stylesheet"
       type="text/css"
     />
-    <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
-    <link
-      rel="preconnect"
-      href="https://static.productionready.io"
-      crossorigin
-    />
-    <link
-      rel="preconnect"
-      href="https://conduit.productionready.io"
-      crossorigin
-    />
-    <link rel="preconnect" href="http://code.ionicframework.com" crossorigin />
-    <link rel="stylesheet" href="//demo.productionready.io/main.css" />
-    <link
-      rel="shortcut icon"
-      type="image/x-icon"
-      href="//demo.productionready.io/favicon.ico"
-    />
-    <style>
-      body {
-        min-height: 101vh;
-      }
-    </style>
 
-    <!-- Entry point of our app -->
-    <script type="module" src="/src/index.tsx"></script>
+    <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
+    <link rel="stylesheet" href="https://demo.productionready.io/main.css" />
+
+    <script src="/src/index.tsx" type="module" async></script>
   </head>
 
-  <body>
-    <div id="app"></div>
-  </body>
+  <body></body>
 </html>
