--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Conduit</title>
 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Solid's implementation of the Realworld App"
+    />
     <!-- Import Ionicon icons & Google Fonts our Bootstrap theme relies on -->
     <link
       href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"
@@ -11,13 +16,13 @@
       type="text/css"
     />
     <link
-      href="https://fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic"
+      href="https://fonts.googleapis.com/css?family=Titillium+Web:700|Source+Serif+Pro:400,700|Merriweather+Sans:400,700|Source+Sans+Pro:400,300,600,700,300italic,400italic,600italic,700italic?display=swap"
       rel="stylesheet"
       type="text/css"
     />
 
     <!-- Import the custom Bootstrap 4 theme from our hosted CDN -->
-    <link rel="stylesheet" href="https://demo.productionready.io/main.css" />
+    <link href="https://demo.productionready.io/main.css" rel="stylesheet" />
 
     <script src="/src/index.tsx" type="module" async></script>
   </head>
