:construction: Early SSR work

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
       }
     </style>
 
-    <script src="/src/index.tsx" type="module" async></script>
+    <!--app-head-->
+    <!--app-preload-->
+    <script src="/src/index.tsx" type="module"></script>
   </head>
 
-  <body></body>
+  <body>
+    <div id="app">
+      <!--app-html-->
+    </div>
+  </body>
 </html>
